# trader

./: .gitattributes  .gitignore  COPYING  INSTALL  Makefile.am  NEWS  README  configure.ac
build-aux/: .gitignore  Makefile.am  README  bootstrap  msgfmt-appdata  msgfmt-desktop
data/: Makefile.am  README  trader.appdata.xml.in  trader.desktop.in
doc/: Makefile.am  README  trader.6
lib/: .gitignore  Makefile.am  README  obsolete-strings.c  xopen-source.h  xopen_source.h
lib/unistr/: .gitignore
m4/: .gitignore  Makefile.am  README  ax_compiler_vendor.m4  ax_with_curses.m4  gnulib-cache.m4  xopen-source.m4  xopen_source.m4
po/: LINGUAS  Makevars  POTFILES.in  README  da.po  de.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  fi.po  fr.po  hr.po  hu.po  nb.po  pt_BR.po  ru.po  sr.po  sv.po
src/: Makefile.am  README  exch.c  exch.h  fileio.c  fileio.h  game.c  game.h  globals.c  globals.h  help.c  help.h  intf.c  intf.h  move.c  move.h  system.h  trader.c  trader.h  utils.c  utils.h
